force-app/main/default/objects/ADM_Epic_Burndown_Item__c/fields/Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>Compound_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>A compound key of Date-Work Id to guarantee each work record only has 1 entry per day</inlineHelpText>
    <label>Compound Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>