force-app/main/default/objects/ADM_Epic_Burndown_Item__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Epic</label>
    <referenceTo>ADM_Epic__c</referenceTo>
    <relationshipLabel>Epic Burndown Items</relationshipLabel>
    <relationshipName>Epic_Burndown_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>