force-app/main/default/objects/ADM_Epic_Burndown_Item__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>