force-app/main/default/objects/ADM_Epic_Burndown_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>